# Thesis

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BinauralSound.cpp  BinauralSound.h  native-lib-openal.cpp  native-lib.cpp
app/src/main/res/drawable/: a_gameplay_icon_motion.xml  a_gameplay_icon_motion_dark.xml  a_gameplay_icon_motion_white.xml  a_gameplay_icon_pause.xml  a_gameplay_icon_pause_white.xml  a_gameplay_icon_touch.xml  a_gameplay_icon_touch_white.xml  a_gameplay_progressbar.xml  a_gameplay_shoot_target.xml  a_gameresult_icon_location_accent.xml  a_gameresult_icon_location_light.xml  a_gameselection_btn_back.xml  a_howto_btn_text.xml  a_main_btn_play.xml  a_main_text_help.xml  a_music_btn_back.xml  a_music_btn_back_accent.xml  a_music_btn_back_dark_accent.xml  a_music_btn_clock.xml  a_music_btn_clock_accent.xml  a_music_btn_clock_dark_accent.xml  a_music_btn_next.xml  a_music_btn_next_accent.xml  a_music_btn_next_dark_accent.xml  a_music_btn_pause.xml  a_music_btn_pause_accent.xml  a_music_btn_pause_dark_accent.xml  a_music_btn_play.xml  a_music_btn_play_accent.xml  a_music_btn_play_dark_accent.xml  a_music_btn_prev.xml  a_music_btn_prev_accent.xml  a_music_btn_prev_dark_accent.xml  a_music_btn_repeat_all.xml  a_music_btn_repeat_all_accent.xml  a_music_btn_repeat_all_dark_accent.xml  a_music_btn_repeat_none.xml  a_music_btn_repeat_none_accent.xml  a_music_btn_repeat_none_dark_accent.xml  a_music_btn_repeat_one.xml  (+31 more)
app/src/main/res/layout/: a_gameplay.xml  a_gameresult.xml  a_gameselection.xml  (+13 more)
(+60 files in other folders)
